# Cummins-Backend

./: README.md  main.py  manage.py  pyproject.toml  requirements.txt
apps/agents/: assignment_agent.py  assignment_engine.py  diagnostic_agent.py  order_agent.py  systemOrchestrator.py  ticketing_agent.py  urls.py
apps/ai/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/assets/: models.py  urls.py  views.py
apps/core/: models.py  utils.py
apps/customers/: models.py  serializers.py  signals.py  urls.py  views.py
apps/diagnostics/: admin.py  models.py  serializers.py  urls.py  views.py
apps/inventory/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
apps/logs/: admin.py  models.py  serializers.py  urls.py  views.py
apps/manuals/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/notifications/: consumer.py  models.py  utils.py
apps/orders/: apps.py  models.py  permissions.py  serializers.py  signals.py  views.py
apps/playbooks/: apps.py
apps/routing/: urls.py  views.py
apps/schedules/: models.py
apps/staffs/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/technicians/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
apps/tickets/: admin.py  models.py  serializers.py  views.py
apps/users/: admin.py  models.py  serializers.py  signals.py  tests.py  urls.py  (+1 more)
breakthru/: asgi.py  db.sqlite3  urls.py  wsgi.py
mcp-demo/: README.md  pyproject.toml
scripts/: dev-check.sh  dev-down.sh  dev-status.sh  dev-up.sh  regression_auth.sh
(+142 files in other folders)
